<resources>
    <string name="app_name">Alura Esporte</string>
    <string name="comprar">Comprar</string>
    <string name="data_de_validade">Data de validade</string>
    <string name="numero_cartao">Número cartão</string>
    <string name="numero_cvc">CVC</string>
    <string name="confirmar_pagamento">Confirmar pagamento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exception">* %s</string>
    <string name="register_user">Cadastrar</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="e_mail">E-mail</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="pagamentos">Pagamentos</string>
    <string name="produtos">Produtos</string>
    <string name="email_do_usuario_">Email do usuario é: %s</string>
    <string name="add_itens">Add Itens</string>
</resources>
